zj/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "www.news.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-svc
            port:
              number: 50000
      - pathType: Prefix
        path: /guonei
        backend:
          service:
            name: nginx-svc
            port:
              number: 50000
      - pathType: Prefix
        path: /guoji
        backend:
          service:
            name: nginx-svc
            port:
              number: 50000
