zj/ingress-net.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-net-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
